[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = "Download YouTube videos and playlists from a file using yt-dlp"
authors = ["Puki <puki@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = ">=2025.11.12"
colorama = "^0.4.6"
python-common-lib = "1.0.19"

[tool.poetry.scripts]
youtube-downloader = "youtube_downloader.download_from_file:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
